# usdcball

./: .gitignore  LICENSE  README.md
keeper/: .env.example  README.md  package.json
keeper/config/: config.example.json
keeper/src/: buyback.ts  config.ts  index.ts  jupiter.ts  liquidity.ts  logger.ts  treasury.ts
program/: Anchor.toml  package.json
program/programs/usdcball/: Cargo.toml
program/programs/usdcball/src/: lib.rs
program/tests/: usdcball.ts
