[package]
name = "usdcball"
version = "0.1.0"
description = "USDCBALL - Autonomous market making protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "usdcball"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
